Rename app to Sachar in app.json

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "e-commerce",
-    "slug": "e-commerce",
+    "name": "Sachar",
+    "slug": "sachar",
     "version": "1.0.0",
 
     "web": {
