--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "^4.9.2",
     "react-native-vector-icons": "^10.2.0",
-    "react-redux": "^9.2.0"
+    "react-redux": "^9.2.0",
+    "expo-auth-session": "~6.0.3",
+    "expo-linking": "~7.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
