Added owner for expo to accept facebook auth Added scheme also for expo

--- a/app.json
+++ b/app.json
@@ -2,6 +2,7 @@
   "expo": {
     "name": "Sachar",
     "slug": "sachar",
+    "owner": "kengakuru",
     "scheme": "sachar",
     "version": "1.0.0",
 
