--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "react-native-vector-icons": "^10.2.0",
     "react-redux": "^9.2.0",
     "expo-auth-session": "~6.0.3",
-    "expo-linking": "~7.0.5"
+    "expo-linking": "~7.0.5",
+    "react-native-maps": "1.18.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
