--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "react-redux": "^9.2.0",
     "expo-auth-session": "~6.0.3",
     "expo-linking": "~7.0.5",
-    "react-native-maps": "1.18.0"
+    "react-native-maps": "1.18.0",
+    "expo-image-picker": "~16.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
