--- a/package.json
+++ b/package.json
@@ -11,35 +11,36 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.0.4",
-    "@react-native-async-storage/async-storage": "1.23.1",
+    "@expo/vector-icons": "14.1.0",
+    "@react-native-async-storage/async-storage": "2.1.2",
     "@react-navigation/bottom-tabs": "^7.2.1",
     "@react-navigation/native": "^7.0.15",
     "@react-navigation/stack": "^7.1.2",
     "@reduxjs/toolkit": "^2.6.1",
-    "@supabase/supabase-js": "^2.49.4",
+    "@supabase/supabase-js": "^1.35.6",
     "axios": "^1.8.4",
-    "expo": "^52.0.39",
-    "expo-haptics": "~14.0.1",
-    "expo-status-bar": "~2.0.1",
+    "expo": "~53.0.8",
+    "expo-auth-session": "~6.1.5",
+    "expo-haptics": "~14.1.4",
+    "expo-image-picker": "~16.1.4",
+    "expo-linking": "~7.1.4",
+    "expo-status-bar": "~2.2.3",
     "nativewind": "latest",
-    "react": "18.3.1",
-    "react-native": "0.76.7",
-    "react-native-gesture-handler": "^2.24.0",
+    "react": "19.0.0",
+    "react-native": "0.79.2",
+    "react-native-gesture-handler": "~2.24.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
-    "react-native-reanimated": "^3.16.2",
-    "react-native-safe-area-context": "^4.12.0",
+    "react-native-maps": "1.20.1",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "^4.9.2",
     "react-native-vector-icons": "^10.2.0",
-    "react-redux": "^9.2.0",
-    "expo-auth-session": "~6.0.3",
-    "expo-linking": "~7.0.5",
-    "react-native-maps": "1.18.0",
-    "expo-image-picker": "~16.0.6"
+    "react-native-websocket": "^1.0.2",
+    "react-redux": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "~18.3.12",
+    "@types/react": "~19.0.10",
     "@typescript-eslint/eslint-plugin": "^7.7.0",
     "@typescript-eslint/parser": "^7.7.0",
     "eslint": "^8.57.0",
@@ -47,7 +48,7 @@
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "tailwindcss": "^3.4.0",
-    "typescript": "~5.3.3"
+    "typescript": "~5.8.3"
   },
   "eslintConfig": {
     "extends": "universe/native",
